Theming: a lot of variable stuff

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1405,6 +1405,16 @@ table.payment-method-features td {
 	}
 }
 
+.theme-editor {
+	.form-control {
+		width: 400px;
+	}
+
+	.colorpicker-component .form-control {
+		width: 372px;
+	}
+}
+
 .themevar-chain-info {
 	color: #bbb;
 	margin-left: 10px;
