--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.TierPrices.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.TierPrices.cshtml
@@ -18,7 +18,7 @@
 }
 
 <div class="pd-tierprices pd-group">
-	<h6 class="font-weight-600 mb-2">
+	<h6 class="font-weight-medium mb-2">
 		@T("Products.TierPrices")
 	</h6>
     <div class="table-responsive">
