--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OffCanvasWishlist.cshtml
@@ -56,7 +56,7 @@
                         }
 
                         <div class="col col-data">
-                            <a class="name font-weight-600" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
+                            <a class="name font-weight-medium" href="@item.ProductUrl" title="@item.ProductName">@item.ProductName</a>
                             <div class="short-desc text-muted">
                                 @Html.Raw(item.ShortDesc.Truncate(descMaxLength, "..."))
                             </div>
