--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
@@ -53,7 +53,7 @@
 
     .price {
         white-space: nowrap;
-        font-weight: 600;
+        font-weight: $sm-font-weight-medium;
     }
 
     .throbber {
