--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_rating.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_rating.scss
@@ -78,7 +78,7 @@
         margin: 0;
         padding-left: 90px;
         font-size: inherit;
-        font-weight: 600;
+        font-weight: $sm-font-weight-medium;
     }
 }
 
