--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_shopbar.scss
@@ -214,7 +214,7 @@
 }
 
 .menubar-group--special {
-    font-weight: 600;
+    font-weight: $sm-font-weight-medium;
     .menubar-link { color: #000 !important; }
 }
 
