--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -1,205 +1,24 @@
 /// <reference path="bs4/scss/bootstrap.scss" />
 
-/* Theme: ALPHA 
+/* Theme: FLEX 
 ------------------------------ */
 
-@import '~/.app/themevars.scss';
-
-$enable-rounded:                true;
-$enable-shadows:                true;
-$enable-gradients:              false;
-$enable-transitions:            true;
-$enable-hover-media-query:      false; 
-$enable-grid-classes:           true;
-
-$body-color:                    #333;
-$link-color:                    #08c;
-
-$gray-dark:                     #292b2c;
-$gray:                          #464a4c;
-$gray-light:                    #999;
-$gray-lighter:                  #eceeef;
-$gray-lightest:                 #f7f7f9;
-
-$red:                           #f44336;
-$orange:                        #ff9800;
-$yellow:                        #ffeb3b;
-$green:                         #4caf50;
-$blue:                          #0275d8;
-$bluegrey:                      #78909c;
-$indigo:                        #3f51b5;
-$teal:                          #009688;
-$pink:                          #ff5b77;
-$purple:                        #9c27b0;
-
-$brand-primary:                 $indigo;
-$brand-success:                 $green;
-$brand-danger:                  $red;
-$brand-warning:                 $orange;
-$brand-info:                    $bluegrey;
-
-$headings-line-height:          1.2;
-
-$font-family-sans-serif:        -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$font-family-monospace:         Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-$font-family-base:              $font-family-sans-serif;
-
-$font-size-base:                0.875rem; // 14px
-$font-size-lg:                  1rem; // 16px
-$font-size-sm:                  0.8125rem; // 13px
-$font-size-xs:                  0.75rem; // 2px
-$line-height-base:              1.5;
-$line-height-sm:                1.5;
-$line-height-lg:                (4 / 3);
-
-$font-size-h1:                  2.25rem;
-$font-size-h2:                  1.75rem;
-$font-size-h3:                  1.5rem;
-$font-size-h4:                  1.25rem;
-$font-size-h5:                  1rem;
-$font-size-h6:                  $font-size-base;
-
-$display1-size:                 5.5rem;
-$display2-size:                 5rem;
-$display3-size:                 4.5rem;
-$display4-size:                 3rem;
-
-$border-radius:                 .25rem; // 3px
-$border-radius-lg:              .3rem; // 4px
-$border-radius-sm:              .2rem; // 2px
-
-$btn-border-radius:             .125rem;
-$btn-border-radius-lg:          .1875rem;
-$btn-border-radius-sm:          .125rem;
-
-$input-box-shadow:              none;
-$input-box-shadow-focus:        none;
-$input-border-radius:           $btn-border-radius;
-$input-border-radius-lg:        $btn-border-radius-lg;
-$input-border-radius-sm:        $btn-border-radius-sm;
-
-$btn-font-weight:               600;
-$btn-line-height:               1.5;
-$btn-padding-x:                 1rem;
-$btn-padding-y:                 0.625rem;
-$btn-padding-x-sm:              0.75rem;
-$btn-padding-y-sm:              0.5rem;
-$btn-padding-x-lg:              1.5rem;
-$btn-padding-y-lg:              0.875rem;
-
-$btn-secondary-border:          #ddd;
-$btn-box-shadow:                inset 0 1px 0 rgba(#fff, .15);
-$btn-focus-box-shadow:          0 0 0 2px rgba($brand-primary, .25);
-$btn-active-box-shadow:         inset 0 3px 5px rgba(#000, .125);
-$btn-transition:                box-shadow .12s ease-in-out;
-
-// Equalize input vertical paddings with button paddings
-$input-line-height:             $btn-line-height;
-$input-padding-y:               $btn-padding-y;
-$input-padding-y-sm:            $btn-padding-y-sm;
-$input-padding-y-lg:            $btn-padding-y-lg;
-$input-box-shadow:              none;
-$input-box-shadow-focus:        none;
-
-$input-height:                  (($font-size-base * $input-line-height) + ($input-padding-y * 2));
-$input-height-lg:               (($font-size-lg * $input-line-height) + ($input-padding-y-lg * 2));
-$input-height-sm:               (($font-size-sm * $input-line-height) + ($input-padding-y-sm * 2));
-
-
-// Dropdown
-$dropdown-link-hover-color:     darken($gray-dark, 5%);
-$dropdown-link-hover-bg:        $gray-lightest;
-$dropdown-link-active-color:    $dropdown-link-hover-color;
-$dropdown-link-active-bg:       darken($dropdown-link-hover-bg, 4%);
-
-
-// Pagination
-
-$pagination-padding-x:          .75rem;
-$pagination-padding-y:          .125rem;
-$pagination-padding-x-sm:       .5rem;
-$pagination-padding-y-sm:       0;
-$pagination-padding-x-lg:       1rem;
-$pagination-padding-y-lg:       .25rem;
-
-
-$pagination-color:              $body-color;
-$pagination-bg:                 transparent;
-$pagination-border-color:       #ddd;
-
-$pagination-hover-color:        $pagination-color;
-$pagination-hover-bg:           rgba(0,0,0, 0.06);
-$pagination-hover-border:       #ddd;
-
-$pagination-active-color:       $pagination-color;
-$pagination-active-bg:          transparent;
-$pagination-active-border:      $pagination-border-color;
-
-
-// List Group
-
-$list-group-color:              $body-color;
-$list-group-bg:                 #fff;
-$list-group-border-color:       rgba(#000,.125);
-
-$list-group-active-color:       $list-group-color;
-$list-group-active-bg:          $list-group-bg;
-$list-group-active-border:      $list-group-border-color;
-
-$list-group-link-color:         #636c72;
-$list-group-link-active-color:  $body-color;
-
-$alert-border-radius:           0;
-
-
-// Cards
-
-$card-deck-margin:              10px;
-
-
-// Brand color variables
-
-$clr-brand-facebook:            #3b5998;
-$clr-brand-twitter:             #55acee;
-$clr-brand-github:              #bd2c00;
-$clr-brand-github2:             #ff9933;
-$clr-brand-github3:             #4183c4;
-$clr-brand-google:              #4285f4;
-$clr-brand-google2:             #db4437;
-$clr-brand-google3:             #f4b400;
-$clr-brand-google4:             #0f9d58;
-$clr-brand-google5:             #e7e6dd;
-$clr-brand-googleplus:          #dd4b39;
-$clr-brand-amazon:              #ff9900;
-$clr-brand-atlassian:           #003366;
-$clr-brand-dropbox:             #007ee5;
-$clr-brand-ebay:                #e53238;
-$clr-brand-flickr:              #0063dc;
-$clr-brand-html5:               #ec6231;
-$clr-brand-instagram:           #3f729b;
-$clr-brand-linkedin:            #007bb6;
-$clr-brand-paypal:              #3b7bbf;
-$clr-brand-pinterest:           #cc2127;
-$clr-brand-rss:                 #ee802f;
-$clr-brand-skype:               #00aff0;
-$clr-brand-stackoverflow:       #ef8236;
-$clr-brand-xing:                #126567;
-$clr-brand-youtube:             #cd201f;
-$clr-brand-microsoft:           #f65314;
-$clr-brand-windows:             #00bcf2;
-$clr-brand-bitbucket:           #205081;
-
 // Bootstrap
+// _custom.scss in the bootstrap folder contains all
+// theme specific variables and overrides.
+
 @import "bs4/scss/bootstrap.scss";
 
+
 // Global
+
 /*@import 'shared/_colors.scss';*/ // <-- uncomment this for convenient prototyping
 @import 'shared/_mixins.scss'; 
 @import 'shared/_typo.scss';
 @import 'shared/_buttons.scss';
 @import 'shared/_forms.scss';
 @import 'shared/_nav.scss';
-@import "shared/_modal-flex.scss";
+@import "shared/_modal-flex.scss"; 
 @import "shared/_throbber.scss";
 @import "shared/_spinner.scss";
 @import "shared/_star-rating.scss";
@@ -214,7 +33,9 @@ $clr-brand-bitbucket:           #205081;
 @import "photoswipe/photoswipe.scss";
 @import "slick/slick.scss";
 
+
 // Main
+
 @import "_shopbar.scss";
 @import "_search.scss";
 @import "_footer.scss";
@@ -236,8 +57,12 @@ $clr-brand-bitbucket:           #205081;
 @import "_slick-theme.scss";
 @import "_drift-theme.scss";
 
+
 // Custom imports from plugins
-@import '~/.app/moduleimports.scss';
+
+@import '~/.app/moduleimports.scss'; 
+
+
 
 html {
     width: 100%;
@@ -254,7 +79,7 @@ body {
 
 #page {
     background: $body-bg;
-    overflow-x: hidden;    
+    overflow-x: hidden;  
 }
 
 .page-main {
@@ -307,13 +132,6 @@ body {
     }
 }
 
-h4, h5, h6, .h4, .h5, .h6 {
-    font-weight: $font-weight-medium;
-}
-
-small, .small {
-  font-size: 90%;
-}
 
 
 .pagination {
@@ -364,7 +182,7 @@ small, .small {
 a.pretty-link {
     color: $body-color;
     text-decoration: none;
-    font-weight: 600;
+    font-weight: $sm-font-weight-medium;
 
     > i { padding-right: 1.2rem; }
     > span {
@@ -398,7 +216,7 @@ a.pretty-link {
     .btn-text-expander {
         display: none;
         position: absolute;
-        font-weight: 600;
+        font-weight: $sm-font-weight-medium;
         left: 0;
         right: 0;
         bottom: 0;
@@ -741,7 +559,7 @@ a.pretty-link {
         vertical-align: middle;
         text-align: center;
         overflow: hidden;
-        font-weight: 600;
+        font-weight: $sm-font-weight-medium;
 
         background-size: cover;
         background-repeat: no-repeat;
@@ -797,7 +615,7 @@ a.pretty-link {
 
 .catmenu {
     .catmenu-path-item {
-        font-weight: 600;
+        font-weight: $sm-font-weight-medium;
         background: rgba($list-group-hover-bg, 0.5);
     }
 
@@ -837,7 +655,7 @@ a.pretty-link {
     }
     
     th {
-        font-weight: 600;
+        font-weight: $sm-font-weight-medium;
     }
 
     tbody {
