--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/bs4/scss/_custom.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/bs4/scss/_custom.scss
@@ -48,7 +48,7 @@ $sm-font-weight-normal:         normal !default;
 $sm-font-weight-medium:         600 !default; 
 $sm-font-weight-bold:           bold !default;         
 
-$sm-mm-bg:                      $sm-gray-lightest !default;
+$sm-megamenu-bg:                $sm-gray-lightest !default;
 
 
 // Virtual file which fetches all theme variables from the database.
