--- a/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Views/Shared/ConfigureTheme.cshtml
@@ -43,7 +43,7 @@
 		@ThemeVarEditor("link-color")
 
 		@ThemeVarEditor("inverse-navbar", "Navbar")
-		@ThemeVarEditor("mm-bg")
+		@ThemeVarEditor("megamenu-bg")
 
 		@ThemeVarEditor("google-font-1", "Typo")
 		@ThemeVarEditor("google-font-2")
